--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -74,6 +74,14 @@ privacy_pack = false
 # edit_page = {repo_url = "https://github.com/akademiekonometri/akademi-ekonometri-academic", content_dir = "", repo_branch = "master", editable = {docs = true, page = false, post = false}}
 
 ############################
+## Code folding
+############################
+# See for more info: https://www.jepusto.com/code-folding-update/
+disable_codefolding = false ## Set to true to disable code folding.
+codefolding_show = "show" ## Set to "hide" or "show" all codes by default.
+codefolding_nobutton = false ## Set to true to exclude the "Show/hide all" button.
+
+############################
 ## Contact details
 ##
 ## These details power the Contact widget (if enabled).
