--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -153,7 +153,7 @@ main_menu = {align = "r", show_logo = true}
 reading_time = true
 
 # Display next/previous section pager? (true/false)
-section_pager = false
+section_pager = true
 docs_section_pager = true  # Display pager in Docs layout (e.g. tutorials)?
 
 # Enable in-built social sharing buttons? (true/false)
