--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -275,7 +275,7 @@ plugins_js  = []
 ############################
 [marketing]
   google_analytics = "UA-167565573-1"
-  google_tag_manager = "GTM-5BHPXG5"
+  google_tag_manager = ""
 
 ############################
 ## Content Management System
