--- a/config.toml
+++ b/config.toml
@@ -9,11 +9,11 @@ title = "Akademi Ekonometri"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://akademiekonometri.rbind.io/"
+baseurl = "https://akademiekonometri.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; [Akademi Ekonometri](https://akademiekonometri.rbind.io/) 2020"
+copyright = "&copy; [Akademi Ekonometri](https://akademiekonometri.netlify.app/) 2021"
 
 ############################
 ## Advanced options below ##
