--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ baseurl = "https://akademiekonometri.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; [Akademi Ekonometri](https://akademiekonometri.netlify.app/) 2021"
+copyright = "&copy; [Akademi Ekonometri](https://akademiekonometri.netlify.app/) {year}"
 
 ############################
 ## Advanced options below ##
