--- a/config.toml
+++ b/config.toml
@@ -43,8 +43,8 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
 #  tags = "/tag/:slug/"
 #  categories = "/category/:slug/"
 #  publication_types = "/publication-type/:slug/"
-#  post = "/post/:year-:month-:day-:slug/" ## For pages in the post.
-   post = "/post/:slug/" ## For pages in the post.
+  post = "/post/:year-:month-:day-:slug/" ## For pages in the post.
+#  post = "/post/:slug/" ## For pages in the post.
 #  courses = "/courses/:slug/" ## For pages in the courses.
 
 [outputs]
