--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,8 @@ summaryLength = 30  # Listing summary length in words. Also, see `abstract_lengt
 paginate = 10  # Number of items per page in paginated lists.
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
-ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"] ## To prevent crash use this line instead of the line below.
+ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_cache$"] ## To prevent crash use this line instead of the line below.
+#ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"] ## "_files$" prevents figures to show.
 #ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "\\.knit\\.md$", "\\.utf8\\.md$", "_cache$"] ## This is adviced but it crashes the rstudio.
 
 [permalinks]
@@ -43,8 +44,8 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
 #  tags = "/tag/:slug/"
 #  categories = "/category/:slug/"
 #  publication_types = "/publication-type/:slug/"
-  post = "/post/:year-:month-:day-:slug/" ## For pages in the post.
-#  post = "/post/:slug/" ## For pages in the post.
+#  post = "/post/:year-:month-:day-:slug/" ## For pages in the post.
+  post = "/post/:slug/" ## For pages in the post.
 #  courses = "/courses/:slug/" ## For pages in the courses.
 
 [outputs]
