--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "hugo"
+  command = "REACT_APP_STAGE=dev CI='' npm run build"
 
 [context.production.environment]
   HUGO_VERSION = "0.82.0"
