hugo update: from 0.82.0 to 0.110.0

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@
 #================= Ignore the following folder/files for git ===================
 
 #============================ User Folders/Files ===============================
+—Examples
 —Helper
 —repo
 /blogdown
 /public/
 /resources/
+.hugo_build.lock
 _data_helper.R
 _estimation_helper.R
 _later.R
