--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,18 @@
 [build]
-  publish = "public"
   command = "hugo"
+  publish = "public"
 
-[context.production.environment]
-  HUGO_VERSION = "0.110.0"
-  HUGO_ENV = "production"
-  HUGO_ENABLEGITINFO = "true"
-
-[context.branch-deploy.environment]
+[build.environment]
   HUGO_VERSION = "0.110.0"
 
-[context.deploy-preview.environment]
-  HUGO_VERSION = "0.110.0"
+[context]
+  [context.branch-deploy]
+    command = "hugo -F -b $DEPLOY_PRIME_URL"
 
-[context.deploy-preview]
-  command = "hugo -b $DEPLOY_PRIME_URL --buildFuture"
+  [context.deploy-preview]
+    command = "hugo -F -b $DEPLOY_PRIME_URL"
 
-[context.branch-deploy]
-  command = "hugo -b $DEPLOY_PRIME_URL --buildFuture"
+[context.production]
+  [context.production.environment]
+    HUGO_ENV = "production"
+    HUGO_ENABLEGITINFO = "true"
