--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -273,9 +273,9 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = "UA-167565573-1"
-  google_tag_manager = "GTM-5BHPXG5"
-#  google_tag_manager = "GTM-5BHPXG5"
+  google_analytics = "G-QP5RFLSK5Y"
+  google_tag_manager = ""
+#  google_analytics = "UA-167565573-1"
 
 ############################
 ## Icon Pack Extensions
