package and hugo update

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,14 @@
+#============================= Akademi Ekonometri ==============================
+#=============================== Configuration =================================
+#================================ config.toml ==================================
+
+#===============================================================================
+# Configuration: General Settings.
+#
+# This file is formatted using TOML syntax - learn more at https://learnxinyminutes.com/docs/toml/
+# Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
+#===============================================================================
+
 # Configuration of Academic
 # Documentation: https://sourcethemes.com/academic/
 #
