--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,19 @@
+#============================= Akademi Ekonometri ==============================
+#================================== Netlify ====================================
+#=============================== netlify.toml ==================================
+
+#===============================================================================
+# Configuration: Netlify.
+#
+# This file is formatted using TOML syntax - learn more at https://learnxinyminutes.com/docs/toml/
+# Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
+#===============================================================================
 [build]
   command = "hugo"
   publish = "public"
 
 [build.environment]
-  HUGO_VERSION = "0.110.0"
+  HUGO_VERSION = "0.119.0"
 
 [context]
   [context.branch-deploy]
